# spacewm

./: CMakeLists.txt  Readme.md  WindowManager.cpp  WindowManager.h  main.cpp  xinitrc
