cmake_minimum_required(VERSION 3.0.2)

PROJECT(spacewm)

SET(CMAKE_BUILD_TYPE Debug)

set(CPACK_PACKAGE_VERSION_MAJOR "1")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")

set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Krzysztof Borowczyk")
set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)



include(FindX11)
if (X11_FOUND)
  include_directories(${X11_INCLUDE_DIR} ${X11_XComposite_INCLUDE_PATH})
else()
  message("X11 not found!")
endif()

FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)

ADD_DEFINITIONS(-Wall)

INCLUDE_DIRECTORIES(.)

#set(CMAKE_AUTOMOC ON)
#set(CMAKE_AUTORCC ON)

SET(SOURCES
  main.cpp
  WindowManager.cpp
)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_LINK_LIBRARIES(${PROJECT_NAME}
  ${X11_LIBRARIES} ${X11_Xcomposite_LIB}
)
